--- a/memo-pri-wedding/src/components/ConfirmAttendance.astro
+++ b/memo-pri-wedding/src/components/ConfirmAttendance.astro
@@ -14,8 +14,9 @@ const deadlineFormatted = deadlineDate.toLocaleDateString('es-AR', {
 const formLink = "/confirmacion"; // Placeholder link
 ---
 
-<section id="attendance" class="section bg-white">
+<section id="attendance" class="section bg-white pt-12">
   <div class="container mx-auto text-center">
+    <img src="/images/icon-rvsp.png" alt="RSVP Icon" class="mx-auto mb-4 w-16 h-16">
     <h2 class="section-title text-[#004AAD]">RSVP</h2>
     
 
