--- a/memo-pri-wedding/src/components/SaveTheDate.astro
+++ b/memo-pri-wedding/src/components/SaveTheDate.astro
@@ -60,7 +60,7 @@ const churchGoogleMapsLink = "https://maps.google.com/?q=San+Francisco+Solano+So
     <div class="max-w-md mx-auto px-6 md:px-10 text-[#004AAD]">
       <div class="flex flex-col items-center">
         <!-- Church Icon -->
-        <img src="/images/icon-iglesia.png" alt="Icono Iglesia" class="h-16 w-16 mb-4 text-[#004AAD]" />
+        <img src="/images/icon-iglesia.png" alt="Icono Iglesia" class="h-16 w-auto mb-4 text-[#004AAD]" />
         <!-- Church Name -->
         <p class="text-2xl md:text-3xl font-script tracking-wider mb-2">
           {churchName}
@@ -88,7 +88,7 @@ const churchGoogleMapsLink = "https://maps.google.com/?q=San+Francisco+Solano+So
     <div class="max-w-md mx-auto px-6 md:px-10 text-[#004AAD]">
       <div class="flex flex-col items-center">
         <!-- Fiesta Icon -->
-        <img src="/images/icon-fiesta.png" alt="Icono Fiesta" class="h-16 w-16 mb-4" /> 
+        <img src="/images/icon-fiesta.png" alt="Icono Fiesta" class="h-[88px] w-auto mb-4" />
         <!-- Party Name -->
         <p class="text-2xl md:text-3xl font-script tracking-wider mb-2">
           En {partyName}
